Changed Team and Event entity. Changed Event, Team and User service. Changed AdminTeam, Event and Team controllers.